k8_yaml/yelb-k8s-app-stack.yaml
# TODO: Don't change anything in the "yelb-redis" and "yelb-postgres" resource. However, apply them early in the process, as you will then be able to find information such as used ports and secret names for the further TODOs of other resources.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-appserver
spec:
  replicas: 1
  selector:
    # TODO: Labels on the pods to "assign" them to this Deployment (it's ReplicaSet, to be more precise)
    matchLabels:
      app: yelb-appserver # Assign the pods to this Deployment
      tier: backend # additional label added for better categorization
      #End To do
  template:
    # TODO: Metadata to be added on the pods
    metadata:
      labels:
        app: yelb-appserver
        tier: backend
        #End To do
    spec:
      imagePullSecrets:
      - name: fhnw-gitlab-cr
      containers:
      # TODO: Container Array item with name, image, imagePullPolicy and containerPort
      - name: yelb-appserver
        image: cr.gitlab.fhnw.ch/claudio.schmidli/yelb-appserver-claudio-schmidli:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4567
---
#CLS here we create the yelb-appserver service
apiVersion: v1
kind: Service
metadata:
  name: yelb-appserver
  labels:
# TODO: Full ClusterIP service spec.
    app: yelb 
    tier: backend 
spec:
  type: ClusterIP
  ports:
  - port: 4567 
    targetPort: 4567 #yelp-appserver backend port see line 57
    protocol: TCP
  selector:
    app: yelb-appserver #label of the development, see line 45
    tier: backend #label of the development, see line 46
# END to do
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yelb-ui
      tier: frontend
  template:
    metadata:
      labels:
        app: yelb-ui
        tier: frontend
    spec:
      containers:
      - name: yelb-ui
        image: pschmid/yelb-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
#CLS here we create the yelb-ui Service
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  labels:
    app: yelb
    tier: frontend
spec:
  type: ClusterIP
  ports:
# TODO: The port on which the frontend is running.
  - port: 80
    targetPort: 80 # see line 131
    protocol: TCP
  selector:
# TODO: Labels present on the frondend pods.
    app: yelb-ui # see line 118
    tier: frontend # see line 119
